feat: enhance HoldingPerformanceCalculator with single-pass aggregation and improved performance metrics